add_library(Infra
    token.cpp
    ast.cpp
    astVisit.cpp
    astToString.cpp
    scanner.cpp
    parser.cpp
    codegen.cpp
)

target_include_directories(Infra PUBLIC "${CMAKE_CURRENT_LIST_DIR}/../")
target_link_libraries(Infra PRIVATE fmt::fmt)
target_link_libraries(Infra PUBLIC 
    llvm::LLVMCore
	llvm::LLVMSupport
	llvm::LLVMAggressiveInstCombine
	llvm::LLVMAnalysis
	llvm::LLVMAsmParser
	llvm::LLVMAsmPrinter
	llvm::LLVMBinaryFormat
	llvm::LLVMBitReader
	llvm::LLVMBitstreamReader
	llvm::LLVMBitWriter
	llvm::LLVMCFGuard
	llvm::LLVMCFIVerify
	llvm::LLVMCodeGen
	llvm::LLVMCoroutines
	llvm::LLVMCoverage
	llvm::LLVMDebugInfoCodeView
	llvm::LLVMDebuginfod
	llvm::LLVMDebugInfoDWARF
	llvm::LLVMDebugInfoGSYM
	llvm::LLVMDebugInfoLogicalView
	llvm::LLVMDebugInfoMSF
	llvm::LLVMDebugInfoPDB
	llvm::LLVMDemangle
	llvm::LLVMDiff
	llvm::LLVMDlltoolDriver
	llvm::LLVMDWARFLinker
	llvm::LLVMDWP
	llvm::LLVMExecutionEngine
	llvm::LLVMExegesis
	llvm::LLVMExegesisX86
	llvm::LLVMExtensions
	llvm::LLVMFileCheck
	llvm::LLVMFrontendHLSL
	llvm::LLVMFrontendOpenACC
	llvm::LLVMFrontendOpenMP
	llvm::LLVMFuzzerCLI
	llvm::LLVMFuzzMutate
	llvm::LLVMGlobalISel
	llvm::LLVMInstCombine
	llvm::LLVMInstrumentation
	llvm::LLVMInterfaceStub
	llvm::LLVMInterpreter
	llvm::LLVMipo
	llvm::LLVMIRPrinter
	llvm::LLVMIRReader
	llvm::LLVMJITLink
	llvm::LLVMLibDriver
	llvm::LLVMLineEditor
	llvm::LLVMLinker
	llvm::LLVMLTO
	llvm::LLVMMC
	llvm::LLVMMCA
	llvm::LLVMMCDisassembler
	llvm::LLVMMCJIT
	llvm::LLVMMCParser
	llvm::LLVMMIRParser
	llvm::LLVMObjCARCOpts
	llvm::LLVMObjCopy
	llvm::LLVMObject
	llvm::LLVMObjectYAML
	llvm::LLVMOption
	llvm::LLVMOrcJIT
	llvm::LLVMOrcShared
	llvm::LLVMOrcTargetProcess
	llvm::LLVMPasses
	llvm::LLVMProfileData
	llvm::LLVMRemarks
	llvm::LLVMRuntimeDyld
	llvm::LLVMScalarOpts
	llvm::LLVMSelectionDAG
	llvm::LLVMSymbolize
	llvm::LLVMTableGen
	llvm::LLVMTableGenGlobalISel
	llvm::LLVMTarget
	llvm::LLVMTextAPI
	llvm::LLVMTransformUtils
	llvm::LLVMVectorize
	llvm::LLVMWindowsDriver
	llvm::LLVMWindowsManifest
	llvm::LLVMX86AsmParser
	llvm::LLVMX86CodeGen
	llvm::LLVMX86Desc
	llvm::LLVMX86Disassembler
	llvm::LLVMX86Info
	llvm::LLVMX86TargetMCA
    llvm::Remarks
    llvm::LTO
    )
